--- a/task-6/time-manifests/time-backend-service.yml
+++ b/task-6/time-manifests/time-backend-service.yml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: time-frontend-service
+  name: time-backend-service
   namespace: time
 spec:
   type: NodePort
   selector:
-    app: time-frontend   # Use this selector to find pods to load balance across
+    app: time-backend   # Use this selector to find pods to load balance across
   ports:
     - name: http
       port: 3000        # Port exposed within the cluster
